[package]
name = "dummy-agones"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "Dummy Agones SDK server for developing Agones integrations"
repository = "https://github.com/pierd/dummy-agones"
keywords = [
    "agones",
    "testing",
]
categories = ["game-development"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-yaml = "0.3"
futures = "0.3"
futures-core = "0.3"
hybrid-service = "0.1"
hyper = { version = "0.14", features = ["full"] }
parking_lot = "0.12"
prost = "0.11"
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
agones = { git = "https://github.com/googleforgames/agones", rev = "refs/tags/v1.33.0" }
claims = "0.7"
fake = "2.6"

[build-dependencies]
tonic-build = "0.9"
